--- a/app/src/main/res/layout/fragment_pie.xml
+++ b/app/src/main/res/layout/fragment_pie.xml
@@ -13,10 +13,12 @@
     </com.github.mikephil.charting.charts.PieChart>
 
     <TextView
+        android:id="@+id/tv_des"
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:text="demo"/>
 </LinearLayout>
