--- a/app/src/main/res/layout/fragment_pie.xml
+++ b/app/src/main/res/layout/fragment_pie.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFEFEFEF">
 
-    <com.github.mikephil.charting.charts.PieChart
+    <com.gandazhi.piechartdemo.MyPieChart
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/pc_chart">
-        
-    </com.github.mikephil.charting.charts.PieChart>
+        android:layout_height="match_parent"
+        android:id="@+id/pc_chart"
+        app:layout_widthPercent="80%"
+        android:layout_centerInParent="true">
+
+    </com.gandazhi.piechartdemo.MyPieChart>
 
     <TextView
         android:id="@+id/tv_des"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"
+        android:layout_below="@+id/pc_chart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:visibility="invisible"
-        android:text="demo"/>
-</LinearLayout>
+        android:background="@drawable/bg_des"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:text="demo"
+        android:layout_marginTop="10dp"
+        app:layout_widthPercent="80%"/>
+</android.support.percent.PercentRelativeLayout>
