1.隐藏饼状图上面显示的数据 2.在Activity上加了两个button 上一个、下一个 3.添加button更新显示字的方法 4.监听ViewPager，ViewPager更新的时候刷新button字体的显示

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,4 +8,19 @@
         android:id="@+id/vp_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_last"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/btn_left"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_next"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/btn_right"/>
 </RelativeLayout>
